Fix letter-spacing

--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ a {
 
 .user-navigation li:nth-child(2) {
   margin-left: auto;
-  margin-right: 66px;
+  margin-right: 63px;
 }
 
 .user-navigation-item:first-child a::before {
@@ -301,7 +301,7 @@ a {
 }
 
 .inner-page .user-navigation-item:nth-child(2) {
-  margin-left: 23px;
+  margin-left: 19px;
   margin-right: 84px;
   opacity: 0.3;
 }
@@ -311,12 +311,12 @@ a {
 }
 
 .inner-page .user-name {
-  letter-spacing: 0;
+  letter-spacing: 0.25px;
 }
 
-.user-navigation-item:last-child a {
-  letter-spacing: -0.2px;
-}
+/*.user-navigation-item:last-child a {*/
+  /*letter-spacing: -0.2px;*/
+/*}*/
 
 .site-navigation-wrapper {
   position: relative;
@@ -596,14 +596,18 @@ a {
   margin-right: 40px;
 }
 
+.slider-product-description:nth-child(3) b {
+  letter-spacing: 0.7px;
+}
+
 .slider-product-description b {
   margin-top: 79px;
-  margin-bottom: 17px;
+  margin-bottom: 19px;
 
   font-family: "Gilroy", Arial, sans-serif;
   font-weight: 800;
   font-size: 47px;
-  line-height: 57px;
+  line-height: 56px;
   text-transform: none;
   letter-spacing: 0.47px;
   color: #000000;
@@ -614,7 +618,8 @@ a {
   margin: 0;
   margin-bottom: 43px;
   padding: 0;
-  max-width: 480px;
+  max-width: 495px;
+  letter-spacing: 0.2px;
 
   font-family: "Open Sans", Arial, sans-serif;
   font-weight: 300;
@@ -629,6 +634,7 @@ a {
 
 .slider-item:nth-child(3) p {
   width: 460px;
+  letter-spacing: 0.15px;
 }
 
 .button.slider-button {
@@ -664,6 +670,7 @@ a {
 
 .slider-table-row td:first-child {
   width: 157px;
+  letter-spacing: 0.28px;
 }
 
 .slider-table-row th:nth-child(2) {
@@ -961,7 +968,16 @@ a {
 }
 
 .features-slider-item:nth-child(7) p {
-  width: 430px;
+  width: 435px;
+  letter-spacing: 0.29px;
+}
+
+.features-slider-item:nth-of-type(2) .features-slider-text {
+  letter-spacing: 0.28px;
+}
+
+.features-slider-item:nth-of-type(3) .features-slider-text {
+  letter-spacing: 0.25px;
 }
 
 .feature-slider-photo {
@@ -1117,14 +1133,20 @@ a {
 
 .info p:first-of-type {
   padding-bottom: 30px;
+  letter-spacing: 0.13px;
+}
+
+.info .contacts-text:first-of-type {
+  letter-spacing: 0.1px;
 }
 
 .about-us p {
-  width: 472px;
+  width: 470px;
 }
 
 .about-us p:last-of-type {
   padding-bottom: 66px;
+  letter-spacing: -0.15px;
 }
 
 .partners-list {
@@ -1509,7 +1531,7 @@ a {
   font-weight: 800;
   font-size: 47px;
   line-height: 47px;
-  letter-spacing: 0.47px;
+  letter-spacing: 0.6px;
   color: #000;
   margin: 0;
   padding: 0;
@@ -1967,6 +1989,7 @@ a {
 
 .column-right h2 {
   margin-right: 53px;
+  letter-spacing: 3.6px;
 }
 
 .items-sorting-left {
@@ -2159,6 +2182,12 @@ a {
   font-size: 18px;
   width: 260px;
   line-height: 30px;
+  letter-spacing: 0.2px;
+  margin-top: 1px;
+}
+
+.catalog-item-title > .catalog-item-three {
+  letter-spacing: 0.1px;
 }
 
 .catalog-item-title .catalog-item-name {
@@ -2170,6 +2199,9 @@ a {
   font-family: "Gilroy", Arial, sans-serif;
   font-weight: 300;
   font-size: 16px;
+  margin-top: 2px;
+  margin-left: 2px;
+  letter-spacing: 0.15px;
 }
 
 .pagination-list {
@@ -2190,7 +2222,8 @@ a {
 }
 
 .pagination-list li {
-  padding: 19px 0;
+  padding-bottom: 18px;
+  padding-top: 20px;
 }
 
 .pagination-item:first-child {
